internship evaluations/interruption reports: removed clinical_tutor_id attribute
