# app/Http/Resources/Evaluation.php
@@ -21,9 +21,6 @@ class Evaluation extends JsonResource
             'notes' => $this->notes,
             'internship' => $this->when($this->withInternshipAttribute($request) === true, new InternshipResource($this->internship)),
 
-            // This field is returned as string, but cannot understand why...
-            'clinical_tutor_id' => (int)$this->clinical_tutor_id,
-
         ];
 
         foreach (config('internships.evaluations.items') as $item) {
